<resources>
    <string name="all_name">all</string>
    <string name="app_name">CyberAware</string>
    <string name="blank_name">"You left your username blank"</string>
    <string name="clear_choices">RESET</string>
    <string name="delete">Delete Item?</string>
    <string name="delete_warning">Would you like to delete the selected article from Favorites?</string>
    <string name="done">Done</string>
    <string name="edit_feed">Edit Feed</string>
    <string name="enter_username">Enter Username</string>
    <string name="Erase_History">Erase History</string>
    <string name="favorite">Favorites</string>
    <string name="latitude">Latitude</string>
    <string name="location">Location:</string>
    <string name="location_message">Welcome to Cramer!</string>
    <string name="location_prompt">"use location services?"</string>
    <string name="malicious_app_instruct">*Please uninstall the following apps for your protection:</string>
    <string name="malicious_app_tag">Malicious Apps Detected:</string>
    <string name="malicious_app_warning">Malicious Apps Detected</string>
    <string name="my_feed">My Feed</string>
    <string name="news">News</string>
    <string name="no">no</string>
    <string name="notification_caps">NOTIFICATIONS</string>
    <string name="notification_name">Notifications</string>
    <string name="old_settings">Use Old Settings</string>
    <string name="personal_caps">PERSONAL</string>
    <string name="personal_filter">Personal Filter</string>
    <string name="privacy_caps">PRIVACY</string>
    <string name="recommendation_title">Recommended Article</string>
    <string name="role_instructions">Please select your skill level.</string>
    <string name="safety">Cyber Safety</string>
    <string name="save">SAVE</string>
    <string name="saved">saved</string>
    <string name="search_name">Search</string>
    <string name="settings_name">Settings</string>
    <string name="sign_up_name">Sign Up</string>
    <string name="skill_clarification">*skill level refers to how knowledgeable you are about cybersecurity*</string>
    <string name="social_media">Social Media Access</string>
    <string name="sort_name">sort</string>
    <string name="tip_name">Tips</string>
    <string name="topic_pick">Pick cybersecurity topics you are interested in:</string>
    <string name="url_toast">"URL not found"</string>
    <string name="usage">Usage:</string>
    <string name="usage_prompt">"Usage permissions must be enabled in settings for full functionality"</string>
    <string name="username">Username</string>
    <string name="username_hint">Please enter username</string>
    <string name="whitelist">Wifi Whitelist:</string>
    <string name="wifi">Wifi:</string>
    <string name="wifi_warning">Insecure Wifi</string>
    <string name="yes">yes</string>
    <string name="malicious_app_explanation">
        \nBEWARE: We found a known malicious app on your device. Please look at the list of apps
        below and delete the corresponding app(s) from your device:
    </string>
    <string name="malicious_app_extended">
        \nNote: These apps are not in the Play Store anymore
    </string>
    <string name="usageInfo">
        *Note: To fully enable Usage, please also make sure to grant Usage Access permission in
        your Phone Settings*
    </string>
    <string name="wifi_explanation">
        \nWARNING: You are on an unencrypted and therefore insecure Wi-Fi network. Avoid logging
        into online accounts since your usernames and passwords can be easily stolen.
    </string>
    <string name="Beginner">Beginner</string>
    <string name="Intermediate">Intermediate</string>
    <string name="Advanced">Advanced</string>
    <string name="Expert">Expert</string>
    <string-array name="article_types">
        <item>Account hijacking</item>
        <item>Adware</item>
        <item>Advanced Persistent Threats</item>
        <item>Antivirus</item>
        <item>Attack surface</item>
        <item>Attack vector</item>
        <item>Authenticator</item>
        <item>Backdoor</item>
        <item>Backup</item>
        <item>Blacklist</item>
        <item>Bot</item>
        <item>Brute force attack</item>
        <item>Catfishing</item>
        <item>Cracker</item>
        <item>Cryptojacking</item>
        <item>Closed source</item>
        <item>Cloud</item>
        <item>Account hijacking</item>
        <item>Adware</item>
        <item>Advanced Persistent Threats (APT)</item>
        <item>Antivirus</item>
        <item>Attack surface</item>
        <item>Attack vector</item>
        <item>Authenticator</item>
        <item>Backdoor</item>
        <item>Backup</item>
        <item>Blacklist</item>
        <item>Bot</item>
        <item>Brute force attack</item>
        <item>Catfishing</item>
        <item>Cracker</item>
        <item>Cryptojacking</item>
        <item>Closed source</item>
        <item>Cloud</item>
        <item>Credential harvesting</item>
        <item>Critical infrastructure</item>
        <item>Data Loss Prevention (DLP)</item>
        <item>Data encryption</item>
        <item>Data protection</item>
        <item>DDoS (denial-of-service attack)</item>
        <item>DevSecOps</item>
        <item>Exploit</item>
        <item>Extended enterprise</item>
        <item>Firewall</item>
        <item>Group authenticator</item>
        <item>Hacker</item>
        <item>Honeypot</item>
        <item>IP Address</item>
        <item>Identity check</item>
        <item>Incident response plan</item>
        <item>Insider threat</item>
        <item>Keylogger</item>
        <item>Malware</item>
        <item>Open Source</item>
        <item>Patch</item>
        <item>Password sniffing</item>
        <item>Phishing</item>
        <item>Personally identifiable information (PII)</item>
        <item>Ransomware</item>
        <item>Ransomcloud</item>
        <item>ReCAPTCHA</item>
        <item>Rootkit</item>
        <item>Security score</item>
        <item>Segmentation</item>
        <item>Shadow IT</item>
        <item>Social engineering</item>
        <item>Spyware</item>
        <item>Third-party</item>
        <item>Threat</item>
        <item>Trojan</item>
        <item>Virtual Private Network (VPN)</item>
        <item>Virus</item>
        <item>Vulnerability</item>
        <item>Worm</item>
    </string-array>
    <string-array name="tip_names">
        <item>Password Creation</item>
        <item>Password Management</item>
        <item>2-Factor Authentication</item>
        <item>Security Questions</item>
        <item>Http vs Https</item>
        <item>Phishing</item>
        <item>Check Your Wifi Connection</item>
    </string-array>
</resources>