<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1faee"
    android:columnCount="2"
    android:elevation="0dp"
    android:paddingBottom="0dp">


    <TextView
        android:id="@+id/newUsernameText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight=".20"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight=".25"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:hint="Please enter username"
        android:inputType="text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/roleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:layout_rowWeight=".22"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:text="@string/role_instructions"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/skillClarification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_rowWeight=".10"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:text="@string/skill_clarification"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />


    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:drawableStart="@drawable/begmoonicon"
        android:onClick="roleClick"
        android:tag="Beginner"
        android:text="@string/Beginner" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:drawableStart="@drawable/intmoonicon"
        android:onClick="roleClick"
        android:tag="Intermediate"
        android:text="@string/Intermediate" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:drawableStart="@drawable/advmoonicon"
        android:onClick="roleClick"
        android:tag="Advanced"
        android:text="@string/Advanced" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:drawableStart="@drawable/expmoonicon"
        android:onClick="roleClick"
        android:tag="Expert"
        android:text="@string/Expert" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:onClick="signUpListener"
        android:text="@string/sign_up_name"
        android:textSize="18sp" />


</GridLayout>
